<resources>
    <string name="app_name">Dynate Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="com_facebook_loginview_log_out_button">Facebook</string>
    <string name="com_facebook_loginview_log_in_button">Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Facebook</string>
    <string name="tw__login_btn_txt">Twitter</string>
    <string name="facebook_app_id" translatable="false">344409719351164</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb344409719351164</string>
    <string name="DoYouWantToExit">Do you want to exit ?</string>
    <string name="FacebookError">Facebook returned error!</string>
    <string name="NoAppPDF">No application to open PDF!</string>
    <string-array name="city_array">
        <item>Riyadh</item>
        <item>Jeddah</item>
        <item>Mecca</item>
        <item>Medina</item>
        <item>Dammam</item>
        <item>Taif</item>
        <item>Tabuk</item>
        <item>Buraidah</item>
        <item>Khamis Mushait</item>
    </string-array>
    <string-array name="city_location_array" translatable="false">
        <item>24.688,46.722</item>
        <item>21.542,39.198</item>
        <item>21.427,39.826</item>
        <item>24.469,39.614</item>
        <item>26.434,50.103</item>
        <item>21.27,40.416</item>
        <item>28.4,36.572</item>
        <item>26.326,43.975</item>
        <item>18.3,42.733</item>
    </string-array>
    <string name="AboutGlass1" translatable="false">مصنع ركن الهوامير للزجاج المقسي</string>
    <string name="AboutGlass2" translatable="false">الرياض - السلي</string>
    <string name="AboutGlass3" translatable="false">للتواصل ٠٥٠٥٨١٠٢٠٠/٠٥٠٥٧٧٧٦١٨</string>
    <string name="AcceptedByCustomer">Accepted By Customer</string>
    <string name="AccountType">Account Type</string>
    <string name="AddATrip">Add A Trip</string>
    <string name="Address">Address</string>
    <string name="AgentLogin">Agent Login</string>
    <string name="Agree">Agree</string>
    <string name="AlphanumericUsername">Username must have alphabets and numbers!</string>
    <string name="AppPermissionDenied">App permission denied</string>
    <string name="Approve">Approve</string>
    <string name="AreYouSure">Are you sure ?</string>
    <string name="AreYouSureNew">Are you sure ?</string>
    <string name="AttachFiles">Attach Documents</string>
    <string name="BookmarkLocation">Save this location ?</string>
    <string name="Buraidah">Buraidah</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelledByCustomer">Cancelled By Customer</string>
    <string name="CancelSuccess">Cancellation of Trip Success</string>
    <string name="CancelTrip">Cancel Trip</string>
    <string name="Card">Card</string>
    <string name="CardNotSelected">Card not selected.</string>
    <string name="CarForm">Car Papers</string>
    <string name="CarFormNotSelected">Car Papers not selected.</string>
    <string name="ChooseFromGallery">Choose from Gallery</string>
    <string name="CompletedTrips">Completed Trips</string>
    <string name="ConfirmDetail">Sender and Receiver Details</string>
    <string name="ConfirmPassword">Confirm Passsword</string>
    <string name="ConfirmTrip">Confirm Trip</string>
    <string name="Continue">Continue</string>
    <string name="Converting">Converting....</string>
    <string name="ConvertToAgent">Convert to Agent</string>
    <string name="Dammam">Dammam</string>
    <string name="DataWillBeCleared">Data will be cleared. Are you sure ?</string>
    <string name="Date">Date</string>
    <string name="DeleteBookmarkedLocation">Delete saved location ?</string>
    <string name="Distance">Driving distance</string>
    <string name="DistanceToDriverInKM">Distance to Driver in KM</string>
    <string name="DistanceWithinAKM">Distance from start location within one KM, Do you want to continue ?</string>
    <string name="DocumentNameExist">Document Name Exist!</string>
    <string name="Done">Done</string>
    <string name="Driver">Driver</string>
    <string name="DriverLogin">Driver Login</string>
    <string name="DriverReplies">Driver Replies</string>
    <string name="DuplicateMobile">Mobile Number already registered</string>
    <string name="DuplicateUsername">Username already registered</string>
    <string name="Duration">Duration</string>
    <string name="EditOrder">Edit Order</string>
    <string name="Email">Email</string>
    <string name="EnterFileName">Enter Filename</string>
    <string name="EnterYourPrice">Enter your price</string>
    <string name="Facebook">Facebook</string>
    <string name="FilledDataWillBeLost">Filled data will be lost, Are you sure ?</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="From">From</string>
    <string name="FromMobileAndToMobileSame">From-Mobile and To-Mobile is the same</string>
    <string name="GlassFactory">Glass factory ?</string>
    <string name="Home">Home</string>
    <string name="IAgreeTo">I Agree to</string>
    <string name="IAgreeToTermsAndConditions">I agree to Terms and Conditions</string>
    <string name="IDNotSelected">ID Proof not selected.</string>
    <string name="ImageID">ID Proof</string>
    <string name="InActiveMethodContactWakala">Method inactive, Contact wakala for activation.</string>
    <string name="InvalidAddress">Invalid Address!</string>
    <string name="InvalidDate">Invalid Date</string>
    <string name="InvalidEmail">Invalid Email!</string>
    <string name="InvalidFileName">Invalid Filename!</string>
    <string name="InvalidLicenseNo">Invalid LicenseNo!</string>
    <string name="InvalidLogin">Invalid login!</string>
    <string name="InvalidMobileNumber">Invalid Mobile Number!</string>
    <string name="InvalidName">Invalid Name!</string>
    <string name="InvalidOTPNumber">Invalid OTP</string>
    <string name="InvalidPassword">Invalid Password!</string>
    <string name="InvalidReceiverMob">Invalid Receiver Mobile Number</string>
    <string name="InvalidReceiverName">Invalid Receiver Name</string>
    <string name="InvalidSenderMob">Invalid Sender Mobile Number</string>
    <string name="InvalidSenderName">Invalid Sender Name</string>
    <string name="InvalidShipment">Invalid Shipment</string>
    <string name="InvalidSubject">Invalid Subject</string>
    <string name="InvalidTime">Invalid Time</string>
    <string name="InvalidUsername">Invalid Username!</string>
    <string name="InvalidVehicle">Invalid Vehicle</string>
    <string name="Jeddah">Jeddah</string>
    <string name="KhamisMushait">Khamis Mushait</string>
    <string name="LicenseInArabic">License in Arabic</string>
    <string name="LicenseInEnglish">License in English</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Make">Type</string>
    <string name="MakeOffline">Make Offline</string>
    <string name="MakeOnline">Make Online</string>
    <string name="Map">Map</string>
    <string name="Mecca">Mecca</string>
    <string name="Medina">Medina</string>
    <string name="Meters">Meters</string>
    <string name="Mobile">Mobile</string>
    <string name="MobileRequired">Mobile</string>
    <string name="Model">Model</string>
    <string name="MyBookedTrip">My Booked Trips</string>
    <string name="MyOrders">My Orders</string>
    <string name="Name">Name</string>
    <string name="NameInArabic">Name in Arabic</string>
    <string name="NameInEnglish">Name in English</string>
    <string name="NameRequired">Name</string>
    <string name="Negotiable">Negotiable</string>
    <string name="NewOrders">New Orders</string>
    <string name="NewTripRequests">New Trip Requests</string>
    <string name="No">No</string>
    <string name="NoMobileNumber">Mobile number empty!</string>
    <string name="NotAgree">Not Agree</string>
    <string name="NowOfflineChangeToOnline">You are not online. You must be online. Are you sure ?</string>
    <string name="Ok">Ok</string>
    <string name="Order">Order</string>
    <string name="OrderNo">Order No</string>
    <string name="Other">Other Papers</string>
    <string name="OtherNotSelected">Other Papers not selected.</string>
    <string name="OTP">OTP</string>
    <string name="OTPSendPleaseVerifyToContinue">OTP send, please verify to continue.</string>
    <string name="Password">Password</string>
    <string name="PasswordMin6Char">Password minimum 6 characters!</string>
    <string name="PasswordMinFourCharaters">Password minimum four charaters!</string>
    <string name="PasswordRequired">Password</string>
    <string name="PickLocation">Pick Location</string>
    <string name="PleaseVerifyYourMobileNumber">Please verify your Mobile Number</string>
    <string name="PreviousDateOrTime">Previous Date or Time Selected</string>
    <string name="PreviousOrders">Previous Orders</string>
    <string name="Rate">Price</string>
    <string name="ReceiverDetails">Receiver Details</string>
    <string name="ReceiverIs">Receiver is</string>
    <string name="Register">Register</string>
    <string name="RegisteringUnderCompany">Are you registering under a company ?</string>
    <string name="RegisterNewUser">Register new user</string>
    <string name="RegistrationSuccessful">Registration Successful</string>
    <string name="RegistrationSuccessfulPleaseContactOffice">Registration successful, Please contact office to activate your account.</string>
    <string name="RejectedByCustomer">Rejected By Customer</string>
    <string name="RejectiosSuccess">Rejected successfully</string>
    <string name="RememberMe">Remember Me</string>
    <string name="RemoveItem">Remove</string>
    <string name="ReplyOrder">Reply To Order</string>
    <string name="ResendOTP">Resend OTP</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Riyadh">Riyadh</string>
    <string name="Route">Route</string>
    <string name="SelectAddress">Pick My Location</string>
    <string name="SelectCompany">Select Company</string>
    <string name="SelectDropOffLocation">Select Drop-Off Location</string>
    <string name="SelectMake">Select Type</string>
    <string name="SelectModel">Select Model</string>
    <string name="SelectPickUpLocation">Select Pick-Up Location</string>
    <string name="SelectSize">Select Size</string>
    <string name="Send">Send</string>
    <string name="SenderDetails">Sender Details</string>
    <string name="SenderIs">Sender is</string>
    <string name="SenderReceiverDetails">Sender And Receiver Details</string>
    <string name="Settings">Settings</string>
    <string name="Share">Share App</string>
    <string name="ShareMessage">Download Dyanate Application</string>
    <string name="Shipment">Shipment</string>
    <string name="ShipmentDetails">Shipment Details</string>
    <string name="ShipmentSubject">Shipment / Subject</string>
    <string name="ShipmentTitle">Shipment Detail</string>
    <string name="ShowAll">Show All</string>
    <string name="ShowAllNewOrders">Show All New Orders</string>
    <string name="ShowDetails">Show Details</string>
    <string name="ShowReplies">Show Replies</string>
    <string name="ShowRoute">Show Route</string>
    <string name="Size">Size</string>
    <string name="StartPlace">Start Place</string>
    <string name="StartPoint">Starting Point</string>
    <string name="Status">Status</string>
    <string name="StopPlace">End Place</string>
    <string name="StopPoint">Ending Point</string>
    <string name="Subject">Subject</string>
    <string name="Submit">Submit</string>
    <string name="Time">Time</string>
    <string name="FAQ">FAQ</string>
    <string name="Feedback">Feedback</string>
    <string name="Notifications">Notifications</string>
    <string name="SAR">SAR</string>
    <string name="Details">Details</string>
</resources>