<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.ReplyActivity"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorBorder" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:scaleType="fitCenter"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:alpha="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:src="@drawable/logo_1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    style="@style/FontBoldSixteen"
                    android:text="@string/ShipmentTitle"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:id="@+id/sub_title"
                    style="@style/FontSizeFifteen"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/Subject"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/ship_title"
                    android:layout_width="match_parent"
                    style="@style/FontSizeFifteen"
                    android:text="@string/Shipment"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/type_title"
                    style="@style/FontSizeFifteen"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/Make"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/model_title"
                    style="@style/FontSizeFifteen"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/Model"
                    android:layout_height="25dp" />

                <View
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:background="@color/darkest_gray"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/sender_det_title"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    style="@style/FontBoldSixteen"
                    android:text="@string/SenderDetails"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:id="@+id/text_from_name"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    style="@style/FontSizeFifteen"
                    android:text="@string/Name"
                    android:gravity="center_vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Mobile"
                        style="@style/FontSizeFifteen"
                        android:gravity="center_vertical"
                        android:id="@+id/title_from_mobile" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/FontSizeFifteen"
                        android:textDirection="ltr"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:id="@+id/text_from_mobile" />

                </LinearLayout>

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:id="@+id/date_title"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    style="@style/FontSizeFifteen"
                    android:text="@string/Date"
                    android:layout_height="25dp" />

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:id="@+id/time_title"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    style="@style/FontSizeFifteen"
                    android:text="@string/Time"
                    android:layout_height="25dp" />

                <LinearLayout
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="center_vertical"
                        android:maxLines="3"
                        style="@style/FontSizeFifteen"
                        android:text="@string/Address"
                        android:id="@+id/from_addr"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/from_loc"
                        android:layout_width="30dp"
                        android:textColor="#9571d8"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_goto_loc"
                        android:layout_height="30dp" />

                </LinearLayout>

                <View
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:background="@color/darkest_gray"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/receiver_det_title"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/ReceiverDetails"
                    style="@style/FontBoldSixteen"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/Name"
                    style="@style/FontSizeFifteen"
                    android:id="@+id/text_to_name"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Mobile"
                        style="@style/FontSizeFifteen"
                        android:gravity="center_vertical"
                        android:id="@+id/title_to_mobile" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/FontSizeFifteen"
                        android:textDirection="ltr"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:id="@+id/text_to_mobile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="center_vertical"
                        android:maxLines="3"
                        style="@style/FontSizeFifteen"
                        android:text="@string/Address"
                        android:id="@+id/to_addr"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/to_loc"
                        android:layout_width="30dp"
                        android:textColor="#9571d8"
                        android:gravity="center_vertical"
                        android:src="@drawable/ic_goto_loc"
                        android:layout_height="30dp" />

                </LinearLayout>

                <TextView
                    style="@style/FontSizeFifteen"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content"
                    android:text="@string/EnterYourPrice"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <EditText
                        style="@style/FontSizeFifteen"
                        android:id="@+id/edit_price"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="35dp"
                        android:background="@drawable/layout_border_black_transparent_squre"
                        android:gravity="center"
                        android:maxLines="1"
                        android:hint="@string/Rate"
                        android:inputType="numberDecimal" />

                    <CheckBox
                        android:id="@+id/chk_negotiable"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/Negotiable" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_agree"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="33dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="2dp"
                        android:text="@string/Agree"
                        android:background="@drawable/btn_blue_rounded"
                        android:textColor="@color/whiteColor"
                        style="@style/FontBoldSixteen" />

                    <Button
                        android:id="@+id/btn_disagree"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="33dp"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="center"
                        android:text="@string/NotAgree"
                        android:background="@drawable/btn_red_rounded"
                        android:textColor="@color/whiteColor"
                        style="@style/FontSizeFifteen" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorBorder" />
    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/colorFooter" />

</LinearLayout>
