<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_marginBottom="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="10"
            android:id="@+id/priceTextView"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            style="@style/FontSizeSeventeen"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:textColor="@color/darkest_gray"
            style="@style/FontSizeFourteen"
            android:textAlignment="center"
            android:text="@string/SAR"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"  >

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontSizeSixteen"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:text="04/09/2018"
            android:textColor="@color/darkest_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontSizeSixteen"
            android:id="@+id/dateTextView" />

    </LinearLayout>

    <Button
        android:id="@+id/detailsButton"
        android:background="@drawable/layout_rect_white_blue"
        android:textColor="@color/lightBlueColor"
        android:layout_gravity="center"
        android:text="@string/Details"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />

    <View
        android:layout_width="15dp"
        android:layout_height="match_parent" />

</LinearLayout>